force-app/main/default/objects/PBS_gBUILD_PBuildingMPCUpdate__c/PBS_gBUILD_PBuildingMPCUpdate__c.object-meta.xml
<CustomObject>
    <description>gBUILD PBuilding MPC: Minimum Performance Criteria Updates and Design Review</description>
    <label>gBUILD MPC Update</label>
    <nameField>
        <displayFormat>gbMu_{000000}</displayFormat>
        <label>PBSgBUILDMPC</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>gBUILD MPC Updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>