force-app/main/default/objects/PBS_gBUILD_PBuildingMPCUpdate__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>MPC Status Comments</description>
    <inlineHelpText>MPC Status Comments</inlineHelpText>
    <label>Comments</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>