force-app/main/default/objects/PBS_gBUILD_PBuildingMPCUpdate__c/fields/DesignReviewStatus__c.field-meta.xml
<CustomField>
    <fullName>DesignReviewStatus__c</fullName>
    <description>MPC Design Review Status Dropdown</description>
    <inlineHelpText>MPC Design Review Status Dropdown</inlineHelpText>
    <label>Design Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Concur / on track</fullName>
            </value>
            <value>
                <fullName>No - needs more information</fullName>
            </value>
            <value>
                <fullName>No - not on track / potential issues</fullName>
            </value>
            <value>
                <fullName>Review Required</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>P100 Scope Determination Form or Waiver is needed but not yet approved</fullName>
            </value>
            <value>
                <fullName>P100 Scope Determination Form was approved</fullName>
            </value>
            <value>
                <fullName>P100 Waiver was approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>