force-app/main/default/objects/PBS_gBUILD_PBuildingMPCUpdate__c/fields/IsCurrent__c.field-meta.xml
<CustomField>
    <fullName>IsCurrent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Current</label>
    <type>Checkbox</type>
</CustomField>