force-app/main/default/objects/PBS_gBUILD_PBuildingMPCUpdate__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>MPC Question number this relates to</description>
    <inlineHelpText>Please select the MPC this relates to.</inlineHelpText>
    <label>Question</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mpc.1</fullName>
            </value>
            <value>
                <fullName>Mpc.2</fullName>
            </value>
            <value>
                <fullName>Mpc.3</fullName>
            </value>
            <value>
                <fullName>Mpc.4</fullName>
            </value>
            <value>
                <fullName>Mpc.5</fullName>
            </value>
            <value>
                <fullName>Mpc.6</fullName>
            </value>
            <value>
                <fullName>Mpc.7</fullName>
            </value>
            <value>
                <fullName>Mpc.8</fullName>
            </value>
            <value>
                <fullName>Mpc.9</fullName>
            </value>
            <value>
                <fullName>Mpc.10</fullName>
            </value>
            <value>
                <fullName>Mpc.11</fullName>
            </value>
            <value>
                <fullName>Mpc.12</fullName>
            </value>
            <value>
                <fullName>Mpc.13</fullName>
            </value>
            <value>
                <fullName>Mpc.14</fullName>
            </value>
            <value>
                <fullName>Mpc.15</fullName>
            </value>
            <value>
                <fullName>Mpc.16</fullName>
            </value>
            <value>
                <fullName>Mpc.17</fullName>
            </value>
            <value>
                <fullName>Mpc.18</fullName>
            </value>
            <value>
                <fullName>Mpc.19</fullName>
            </value>
            <value>
                <fullName>Mpc.20</fullName>
            </value>
            <value>
                <fullName>Mpc.21</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>