force-app/main/default/objects/PBS_gBUILD_PBuildingMPCUpdate__c/fields/Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Recommendations__c</fullName>
    <description>Project Recommendations or Action Items for Improved Compliance</description>
    <inlineHelpText>Project Recommendations or Action Items for Improved Compliance</inlineHelpText>
    <label>Recommendations</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>