force-app/main/default/objects/PBS_gBUILD_PBuildingMPCUpdate__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>MPC Status Dropdown</description>
    <inlineHelpText>MPC Status Dropdown</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned but not started</fullName>
            </value>
            <value>
                <fullName>Implementation in progress</fullName>
            </value>
            <value>
                <fullName>Implementation complete</fullName>
            </value>
            <value>
                <fullName>Waiver</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Challenge/ not on track</fullName>
            </value>
            <value>
                <fullName>Review Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>