force-app/main/default/objects/PBS_gBUILD_PBuildingMPCUpdate__c/recordTypes/DR.recordType-meta.xml
<RecordType>
    <fullName>DR</fullName>
    <active>true</active>
    <description>Design Review</description>
    <label>Design Review</label>
</RecordType>