force-app/main/default/objects/PBS_gBUILD_PBuildingMPCUpdate__c/recordTypes/MPC.recordType-meta.xml
<RecordType>
    <fullName>MPC</fullName>
    <active>true</active>
    <description>MPC Update</description>
    <label>MPC Update</label>
</RecordType>