force-app/main/default/objects/PBS_gBUILD_PBuildingMPCUpdate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DesignReviewStatus__c</columns>
    <columns>Question__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>